feat: Implement data export functionality supporting JSON and AES-256 encrypted ZIP formats.

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,6 +39,9 @@ sha2 = "0.10"
 # 数据库
 rusqlite = { version = "0.31", features = ["bundled"] }
 
+# ZIP 加密备份
+zip = { version = "2", default-features = false, features = ["aes-crypto", "deflate"] }
+
 # 异步运行时
 tokio = { version = "1", features = ["sync", "time"] }
 
